Added more icons

--- a/sfl_viewer/sfl_viewer.qrc
+++ b/sfl_viewer/sfl_viewer.qrc
@@ -7,5 +7,9 @@
     <file>images/forward.png</file>
     <file>images/pause.png</file>
     <file>images/play.png</file>
+    <file>images/landmarks.png</file>
+    <file>images/bbox.png</file>
+    <file>images/face_ids.png</file>
+    <file>images/labels.png</file>
 </qresource>
 </RCC>
